[package]
name = "libsodium-ffivj"
version = "0.2.3"
authors = ["Vivek Jain <vivekjain007@outlook.com>"]
links = "sodium"
build = "build.rs"
license = "MIT/ISC"
repository = "https://github.com/vivekjain007/libsodium-ffivj"
description = "Native bindings (FFI) to the libsodium library.Based on libsodium-ffi this crate upgrades rust edition to 2021 and zip & bindgen dependencies"
edition = "2021"

[lib]
name = "libsodium_ffivj"

[build-dependencies]
vcpkg = "0.2"
pkg-config = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
unwrap = "1.2"
bindgen = "0.68"
curl = "0.4"
